--- a/Assets/styles/projetos.css
+++ b/Assets/styles/projetos.css
@@ -7,16 +7,58 @@
 }
 
 .projetos__titulo {
-    margin-bottom: 2em;
+    margin-bottom: 1em;
     color: var(--light);
     font-weight: 600;
     font-size: 1.4em;
     text-transform: uppercase;
 }
 
-.projetos__subtitulo {
+.projetos__cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.projetos__card {
+    margin-top: 3em;
+    width: 400px;
+}
+
+.card__imagem {
+    width: 400px;
+    height: 150px;
+    object-fit: cover;
+}
+
+.card__titulo {
     color: var(--light);
     font-size: 1.2em;
     margin-top: 1.2em;
     margin-bottom: 1em;
+}
+
+.card__descricao {
+    color: var(--gray-light);
+    font-size: 0.8em;
+    letter-spacing: 1px;
+    line-height: 25px;
+
+    text-align: justify;
+}
+
+.card__tecnologias {
+    color: var(--blue);
+    margin-top: 1em;
+    margin-bottom: 2em;
+}
+
+.btn--visualizar {
+    border-image: var(--gradient-purple);
+}
+
+@media screen and (max-width: 1100px) 
+{
+    .projetos__cards {
+        grid-template-columns: 1fr;
+    }
 }
