Pequenas correções para mobile

--- a/Assets/styles/banner.css
+++ b/Assets/styles/banner.css
@@ -72,4 +72,8 @@
     .banner__titulo em {
         font-size: 1.8em;   
     }
+    
+    .button-linkedin, .button-github {
+        background-color: var(--dark-200);
+    }
 }
