--- a/Assets/styles/experiencia.css
+++ b/Assets/styles/experiencia.css
@@ -78,6 +78,11 @@
 }
 
 @media screen and (max-width: 900px) {
+
+    .experiencia__container {
+        padding: 3em 0;
+    }
+
     .experiencia__conteudo__container {
         flex-direction: column;
     }
@@ -90,4 +95,6 @@
         width: 100%;
         margin-top: 3em;
     }
+
+    
 }
