--- a/Assets/styles/header.css
+++ b/Assets/styles/header.css
@@ -27,7 +27,7 @@
 
 .header__menu {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 .header__item {
@@ -38,6 +38,7 @@
 .header__item a {
     position: relative;
     font-size: 18px;
+    line-height: 30px;
     color: var(--gray-light);
     text-decoration: none;
     padding: 0 10px;
@@ -85,6 +86,6 @@
 
     .header__menu {
         flex-wrap: wrap;
-        justify-content: space-between;
+        justify-content: space-around;
     }
 }
