--- a/Assets/styles/sobre.css
+++ b/Assets/styles/sobre.css
@@ -80,10 +80,14 @@
 
     .sobre__conteudo {
         width: 80%;
-        margin-top: 1.5em;
+        margin-top: 2em;
     }
 
     .sobre__links a {
         font-size: 2em;
+    }
+
+    .sobre__subtitulo {
+        margin-top: 2em;
     }
 }
