--- a/Assets/styles/experiencia.css
+++ b/Assets/styles/experiencia.css
@@ -95,6 +95,14 @@
         width: 100%;
         margin-top: 3em;
     }
+}
 
-    
+@media screen and (max-width: 550px) {
+    .conteudo .d-flex {
+        flex-wrap: wrap;
+    }
+
+    .experiencia__data {
+        margin-top: 1em;
+    }
 }
