--- a/Assets/styles/projetos.css
+++ b/Assets/styles/projetos.css
@@ -16,13 +16,15 @@
 
 .projetos__cards {
     display: grid;
-    grid-template-columns: 50% 50%;
-    gap: 0 10% ;
+    grid-template-columns: 1fr 1fr;
+    row-gap: 50px;
+    column-gap: 20px;
 }
 
 .projetos__card {
-    margin-top: 3em;
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .card__imagem {
