--- a/Assets/styles/styles.css
+++ b/Assets/styles/styles.css
@@ -50,10 +50,18 @@ body {
     background-color: var(--dark-200);
     
     border: 2px solid transparent;
-    border-radius: 10px; /* Não funciona por causa do border-image :\ */
+    
+    border-radius: 10px; /* Não funciona por causa do border-image : */
 
     transition: transform 0.3s;
 }
+
+/* border: double 4px transparent;
+  border-radius: 80px;
+  background-image: linear-gradient(white, white), radial-gradient(circle at top left, #f00,#3020ff);
+  background-origin: border-box;
+  background-clip: content-box, border-box; */
+
 
 .btn-padrao:hover {
     background-color: var(--dark);
