--- a/Assets/styles/header.css
+++ b/Assets/styles/header.css
@@ -5,7 +5,7 @@
     align-items: center;
     padding: 3em 0;
 
-    border-bottom: 2px solid var(--dark-200) ;
+    border-bottom: 2px solid var(--cor-bg-secundaria) ;
 }
 
 .header__logo {
@@ -39,7 +39,7 @@
     position: relative;
     font-size: 18px;
     line-height: 30px;
-    color: var(--gray-light);
+    color: var(--cor-texto-secundaria);
     text-decoration: none;
     padding: 0 10px;
 }
@@ -56,7 +56,7 @@
 }
 
 .header__item a:hover {
-    color: var(--light);
+    color: var(--cor-texto-primaria);
 }
 
 .header__item a:hover:after {
