--- a/Assets/styles/projetos.css
+++ b/Assets/styles/projetos.css
@@ -1,5 +1,5 @@
 .projetos {
-    background: var(--dark-200);
+    background: var(--cor-bg-secundaria);
 }
 
 .projetos__container {
@@ -8,7 +8,7 @@
 
 .projetos__titulo {
     margin-bottom: 1em;
-    color: var(--light);
+    color: var(--cor-texto-primaria);
     font-weight: 600;
     font-size: 1.4em;
     text-transform: uppercase;
@@ -35,14 +35,14 @@
 }
 
 .card__titulo {
-    color: var(--light);
+    color: var(--cor-texto-primaria);
     font-size: 1.2em;
     margin-top: 1.2em;
     margin-bottom: 1em;
 }
 
 .card__descricao {
-    color: var(--gray-light);
+    color: var(--cor-texto-secundaria);
     font-size: 0.8em;
     letter-spacing: 1px;
     line-height: 25px;
